--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,5 +1,11 @@
 @import "bootstrap/scss/bootstrap";
 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 img {
     max-width: 100%;
 }
